--- a/redberry-2023/src/pages/cv/styles.module.css
+++ b/redberry-2023/src/pages/cv/styles.module.css
@@ -45,7 +45,7 @@
     margin-right: 12px;
 }
 
-/* .experience h4 {
+.experience h4 {
     color: #F93B1D;
     font-size: 20px;
     margin-bottom: 10px;
@@ -68,4 +68,4 @@
 .experience .description {
     font-size: 18px;
     line-height: 1.3;
-} */
+}
